projetos/desafio-final-dk8s/semana-4/k8s/locust/Paulo-locust-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: locust
  namespace: tipsbank-monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: locust
  template:
    metadata:
      labels:
        app: locust
    spec:
      containers:
        - name: locust
          image: pauloneves/tipsbank-locust:v1.0.0
          ports:
            - containerPort: 8089
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
          readinessProbe:
            httpGet:
              path: /
              port: 8089
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 8089
            initialDelaySeconds: 10
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: locust
  namespace: tipsbank-monitoring
spec:
  type: ClusterIP
  selector:
    app: locust
  ports:
    - name: http
      port: 8089
      targetPort: 8089
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: locust-ingress
  namespace: tipsbank-monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - locust.kode.expert
      secretName: tipsbank-locust-tls
  rules:
    - host: locust.kode.expert
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: locust
                port:
                  number: 8089
# NetworkPolicy para permitir acesso do Ingress Nginx ao Locust
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-nginx-to-locust
  namespace: tipsbank-monitoring
spec:
  podSelector:
    matchLabels:
      app: locust
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
    ports:
    - protocol: TCP
      port: 8089

# NetworkPolicy para permitir acesso do locust à api-contas
# Teoricamente não precisa pois a NetworkPolicy criada para habilitar os acessos ao Prometheus já permite o acesso do locust.
